	- forward port of fix to 2_2 branch:
	  short int in var_arg is promoted to int, according to B. Laurie.
	  The same logic for %o, %d %x would hold for %u I think.
	- in XFRD, soa prim_ns and email domain names are kept in a max
	  size buffer.
	- split up dname_parse into parse from string to wireformat
	  and parse from wireformat to memoryformat, so both can be called.

28 Mar 2006: Miek
	- forward port fixes for zone compiler and \r. svn:1926-1927
	- add DO bit MASK and remove the !! construct

17 Mar 2006: Wouter
	- according to axfr-clarify, added comments that we check
	  more leniently on further responses on a TCP stream.

16 Mar 2006: Wouter
	- Fixed up SOA INFO Send routines. Send from server works.
	- niced up xfrd state file.
	- Fixed up so that after a reload it will continue in diff file
	  where it left off.
	- made send of SOA info use write_socket, in case of short writes.
	- redesigned xfrd_tcp_read to use the same code for ipc read.
	- no free()s before xfrd exit.
	- xfrd handles incoming SOA INFO ipc packets.
	- removed debug, updated zones get SOA INFO sent.

15 Mar 2006: Wouter
	- Fixed up domain table insert, it was being used in routines
	  that originate from nsd-xfer that do not set compression numbers
	  correctly.
	- memleak fix in diffile in case of error.
	- difffile processing works so that NSD can read an axfr saved
	  into the nsd.diff file. (xfrd already request and save it there).
	- split off xfrd tcp handling into xfrd-tcp.c.
	- cleaned up send_udp in xfrd, and read_state.
	- removed xfrd tcp_send_blocking.
	- xfrd sets state from ok to refresh to expired based on timeout.
	- xfrd sets reload timeout.
	- Added zone updated to keep track of zones that are changed
	  after a reload. These zones get their information notifified
	  to xfrd.
	- removed unused zprintrr declaration from zonec.h
	- nsd sends soa information to xfrd.

14 Mar 2006: Wouter
	- TODO updated
	- worked on reload ixfr. It will add/delete RRs and zones.